# kserve-in-kind

./: .gitignore  README.md
install/: create-local-registry.sh  dashboard-grafana.sh  dashboard-jaeger.sh  dashboard-kiali.sh  delete-cluster.sh  download-commands.sh  install.sh  vars.sh
install/files/: istio.yaml  kind-config.yaml
lab/: custom_model.Dockerfile  custom_transformer.Dockerfile  infer-req.py  install.sh  isvc-custom-model.yaml  isvc-iris.yaml  isvc-tf.yaml  lab.yaml  pyproject.toml  sklearn-iris-isvc.yaml  start-isvc-custom.sh  start-isvc-iris.sh  start-isvc-tf.sh  start-isvc.sh
lab/kservelab/: custom_model.py  custom_transformer.py
